# perplexity-clone

./: .env.example  Google Search Engine Results API - SerpApi.html  README.md  claude_plan.md  experiment_queries.py  experiment_results_20251005_165514.json  experiment_results_20251005_165514_report.md  log.txt  main.py  pyproject.toml  task.md
experiments/: FINAL_PROMPT_RECOMMENDATION.md  README.md  experiment_prompts.py  experiment_prompts_v2.py  round2_subjective_analysis.md  run_experiments.py  run_experiments_v2.py  subjective_analysis.md
experiments/round2/: experiment_results_v2_20251005_170320.json  experiment_results_v2_20251005_170320_report.md
src/: config.py  main.py
src/agents/: analytical_agent.py  base_agent.py  comprehensive_agent.py  factual_agent.py
src/judge/: llm_judge.py
src/llm/: openai_client.py
src/search/: result_analyzer.py  serpapi_client.py
src/ui/: __init__.py  console_display.py
src/utils/: citation_formatter.py  response_validator.py
